scripts/nullness/wpi/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8.txt
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyKeyFactory.java:23: error: (dereference.of.nullable) $$ 1 $$ key $$ ( 729, 732 ) $$ dereference of possibly-null reference key
        final PropertyKey newPropertyKey = new PropertyKey (key.intern ());
                                                            ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolder.java:37: error: (dereference.of.nullable) $$ 1 $$ readMethod $$ ( 1017, 1027 ) $$ dereference of possibly-null reference readMethod
            return readMethod.invoke (parent);
                   ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolder.java:47: error: (dereference.of.nullable) $$ 1 $$ writeMethod $$ ( 1309, 1320 ) $$ dereference of possibly-null reference writeMethod
            return writeMethod.invoke (parent, value);
                   ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolderFactory.java:9: error: (dereference.of.nullable) $$ 1 $$ propertyDescriptor $$ ( 260, 278 ) $$ dereference of possibly-null reference propertyDescriptor
        return new PropertyHolder.Builder (propertyDescriptor.getName (), propertyDescriptor.getClass ())
                                           ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/guava/GuavaCache.java:26: error: (argument) $$ 4 $$ unit $$ CacheBuilder.expireAfterAccess $$ @Initialized @MonotonicNonNull TimeUnit $$ @Initialized @NonNull TimeUnit $$ ( 1078, 1111 ) $$ incompatible argument for parameter unit of CacheBuilder.expireAfterAccess.
                                 .expireAfterAccess (builder.expireAfterAccessTime, builder.expireAfterAccessTimeUnit)
                                                                                           ^
  found   : @Initialized @MonotonicNonNull TimeUnit
  required: @Initialized @NonNull TimeUnit
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:35: error: (override.return) $$ 6 $$ @Initialized @Nullable PropertyHolder $$ @Initialized @NonNull PropertyHolder $$ @Initialized @NonNull LeastRecentlyUsedCache $$ @Initialized @Nullable PropertyHolder get(@Initialized @NonNull LeastRecentlyUsedCache this, @Initialized @NonNull PropertyKey p0) $$ @Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder> $$ @Initialized @NonNull PropertyHolder get(@Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder> this, @Initialized @NonNull PropertyKey p0) $$ ( 1441, 1455 ) $$ Incompatible return type.
    public PropertyHolder get (final PropertyKeyFactory.PropertyKey key) {
           ^
  found   : @Initialized @Nullable PropertyHolder
  required: @Initialized @NonNull PropertyHolder
  Consequence: method in @Initialized @NonNull LeastRecentlyUsedCache
    @Initialized @Nullable PropertyHolder get(@Initialized @NonNull LeastRecentlyUsedCache this, @Initialized @NonNull PropertyKey p0)
  cannot override method in @Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder>
    @Initialized @NonNull PropertyHolder get(@Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder> this, @Initialized @NonNull PropertyKey p0)
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:39: error: (override.return) $$ 6 $$ @Initialized @Nullable PropertyHolder $$ @Initialized @NonNull PropertyHolder $$ @Initialized @NonNull LeastRecentlyUsedCache $$ @Initialized @Nullable PropertyHolder get(@Initialized @NonNull LeastRecentlyUsedCache this, @Initialized @NonNull String p0) $$ @Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder> $$ @Initialized @NonNull PropertyHolder get(@Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder> this, @Initialized @NonNull String p0) throws @Initialized @NonNull ClassNotFoundException $$ ( 1555, 1569 ) $$ Incompatible return type.
    public PropertyHolder get (final String key) {
           ^
  found   : @Initialized @Nullable PropertyHolder
  required: @Initialized @NonNull PropertyHolder
  Consequence: method in @Initialized @NonNull LeastRecentlyUsedCache
    @Initialized @Nullable PropertyHolder get(@Initialized @NonNull LeastRecentlyUsedCache this, @Initialized @NonNull String p0)
  cannot override method in @Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder>
    @Initialized @NonNull PropertyHolder get(@Initialized @NonNull ClassPropertyCache<@Initialized @NonNull PropertyKey, @Initialized @NonNull PropertyHolder> this, @Initialized @NonNull String p0) throws @Initialized @NonNull ClassNotFoundException
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:99: error: (dereference.of.nullable) $$ 1 $$ this.evictionStrategy $$ ( 4098, 4119 ) $$ dereference of possibly-null reference this.evictionStrategy
            this.evictionStrategy.setLinkedHashMap (this);
                ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:105: error: (dereference.of.nullable) $$ 1 $$ evictionStrategy $$ ( 4372, 4388 ) $$ dereference of possibly-null reference evictionStrategy
                final boolean evict = evictionStrategy.evictEntry (eldest);
                                      ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:108: error: (dereference.of.nullable) $$ 1 $$ evictionStrategy $$ ( 4559, 4575 ) $$ dereference of possibly-null reference evictionStrategy
            return evictionStrategy.evictEntry (eldest);
                   ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/eviction/EvictBySize.java:24: error: (dereference.of.nullable) $$ 1 $$ map $$ ( 739, 742 ) $$ dereference of possibly-null reference map
        return map.size () >= maxSize;  //To change body of implemented methods use File | Settings | File Templates.
               ^
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/config/AppConfig.java:15: error: (argument) $$ 4 $$ defaultValue $$ AbstractConfiguration.getString $$ null (NullType) $$ @Initialized @NonNull String $$ ( 482, 486 ) $$ incompatible argument for parameter defaultValue of AbstractConfiguration.getString.
        return Properties.properties.getString (property, null);
                                                          ^
  found   : null (NullType)
  required: @Initialized @NonNull String
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
